# embedded-serial-bridge

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yaml
src/: main.rs
