[package]
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
readme = "README.md"
name = "embedded-serial-bridge"
version = "0.1.0"
license = "Apache-2.0"

repository = "https://github.com/ctron/embedded-serial-bridge"

[dependencies]

cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.3"

embedded-hal = "0.2"

rtt-target = { version = "0.2.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-logger = { version = "0.1" }

log = "0.4.11"

stm32f7 = { version = "0.11", features = ["stm32f7x3", "rt"] }
stm32f7xx-hal = { version = "0.2", features = ["stm32f723"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
#stm32f7xx-hal = { path = "../stm32f7xx-hal" }
stm32f7xx-hal = { git = "https://github.com/ctron/stm32f7xx-hal", branch = "feature/add_uart5_1" }

[features]
default = [ "fix_crlf" ]
# fix CR/LF in normal mode
fix_crlf = []