[package]
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
readme = "README.md"
name = "embedded-serial-bridge"
version = "0.3.0"
license = "Apache-2.0"

repository = "https://github.com/ctron/embedded-serial-bridge"

[dependencies]

cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"

casey = "0.3"

embedded-hal = "0.2"

rtt-target = { version = "0.2.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-logger = { version = "0.1" }

log = "0.4.11"

stm32f4 = { version = "0.11", optional = true }
stm32f4xx-hal = { version = "0.8", optional = true }
stm32f7 = { version = "0.11", optional = true }
stm32f7xx-hal = { version = "0.2", optional = true }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
#stm32f7xx-hal = { path = "../stm32f7xx-hal" }
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal" }

[features]
default = ["fix_crlf"]
# fix CR/LF in normal mode
fix_crlf = []

stm32f4xx = []
stm32f7xx = []

stm32f411 = [
    "stm32f4xx",
    "stm32f4",
    "stm32f4/stm32f411",
    "stm32f4/rt",
    "stm32f4xx-hal",
    "stm32f4xx-hal/stm32f411",
    "stm32f4xx-hal/rt"
]
stm32f723 = [
    "stm32f7xx",
    "stm32f7",
    "stm32f7/stm32f7x3",
    "stm32f7/rt",
    "stm32f7xx-hal",
    "stm32f7xx-hal/stm32f723",
    "stm32f7xx-hal/rt"
]